--- a/Tarea #996 Bitacoras/Tarea #996_11.md
+++ b/Tarea #996 Bitacoras/Tarea #996_11.md
@@ -6,6 +6,12 @@ A test environment provides a secure place to perform penetration testing and se
 
 [Instalador  > Metasploitable 2](https://sourceforge.net/projects/metasploitable/)
 
+## Logging in to Metasploitable 2
+
+The login for Metasploitable 2 is "msfadmin:msfadmin"
+
+
+
 ---
 ## Lista de puertos de servicios
 
